# anki_web

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  manage.py  pyproject.toml
anki_desktop/: all_testing.py  create_new_cards.py  create_new_deck.py  login_logout_user.py  main.py  pydantic_models.py  pydantic_schemas.py  pyproject.toml  study_cards.py  test.py  utils.py
anki_web/: asgi.py  forms.py  settings.py  urls.py  views.py  wsgi.py  yasg.py
anki_web/anki_api/: apps.py  serializers.py  urls.py  views.py
anki_web/cards/: apps.py  filters.py  forms.py  models.py  serializers.py  urls.py  views.py
anki_web/cards/migrations/: 0001_initial.py  0002_cards_answer_type_cards_question_type.py  0003_cards_easiness_cards_interval_cards_repetitions_and_more.py  0004_cards_random_num.py  0005_alter_cards_options.py
anki_web/custom_mixins/: mixins.py
anki_web/decks/: apps.py  forms.py  models.py  urls.py  views.py
anki_web/decks/migrations/: 0001_initial.py
anki_web/mixins/: castom_mixins.py
anki_web/styles/: admin.py  apps.py  models.py
anki_web/styles/migrations/: 0001_initial.py
anki_web/templates/: base.html  delete.html  form.html  login.html  main_page.html  registration.html
anki_web/templates/cards/: cards.html  cards_answer.html  cards_learn.html  show_card.html  upload.html
anki_web/templates/decks/: decks.html
anki_web/templates/users/: confirm_email.html  info_message.html  profile.html  reset_password_mail.html
anki_web/templatetags/: card_extras.py
anki_web/users/: apps.py  constants.py  forms.py  models.py  urls.py  views.py
anki_web/users/migrations/: 0001_initial.py
static/css/: styles.css
static/js/: main.js
theme/static_src/: package-lock.json  tailwind.config.js
theme/static_src/src/: styles.css
