[tool.poetry]
name = "anki-web"
version = "0.1.0"
description = ""
authors = ["Timur <81976283+mym1chelle@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "anki_web"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.4"
dj-database-url = "^1.2.0"
django-bootstrap4 = "^22.3"
python-dotenv = "^0.21.0"
psycopg2-binary = "^2.9.5"
markdown = "^3.4.1"
supermemo2 = "^2.0.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
coverage = "^7.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
