[tool.poetry]
name = "anki-web"
version = "0.1.0"
description = ""
authors = ["Timur <81976283+mym1chelle@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "anki_web"}]

[tool.poetry.dependencies]
python = "3.11.2"
django = "^4.1.4"
dj-database-url = "^1.2.0"
python-dotenv = "^0.21.0"
psycopg2-binary = "^2.9.5"
markdown = "^3.4.1"
supermemo2 = "^2.0.0"
djangorestframework = "^3.14.0"
djoser = "^2.1.0"
drf-yasg = "^1.21.4"
django-filter = "^22.1"
django-tailwind = "^3.5.0"
django-allauth = "^0.52.0"

[tool.poetry.group.desk.dependencies]
requests = "^2.28.2"
tksheet = "^5.4.1"
tkhtmlview = "^0.1.1.post5"
pydantic = "^1.10.4"
customtkinter = "^5.1.2"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
coverage = "^7.0.1"
django-debug-toolbar = "^3.8.1"
py2app = "^0.28.5"
autopep8 = "^2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
