[tool.poetry]
name = "ui-project"
version = "0.1.0"
description = ""
authors = ["Timur <81976283+mym1chelle@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "ui_project"}]

[tool.poetry.dependencies]
python = "^3.11.1"
requests = "^2.28.2"
tksheet = "^5.4.1"
supermemo2 = "^2.0.0"
tkhtmlview = "^0.1.1.post5"
ttkbootstrap = "^1.10.1"
aiohttp = {extras = ["speedups"], version = "^3.8.3"}
pydantic = "^1.10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
